--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -28,8 +28,8 @@ ZMK_COMBO(space, &kp SPACE,     LB3 LB2      DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(ret,   &kp RETURN,    LB2 LB1,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(mouse, &smart_mouse,  LB3 LB1,     DEF NAV NUM, COMBO_TERM_SLOW)
 
-ZMK_COMBO(tab,   HRC_TAB,       LM3 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(repeat,HRC_REPEAT,    LM2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
+// ZMK_COMBO(tab,   HRC_TAB,       LM3 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
+// ZMK_COMBO(repeat,HRC_REPEAT,    LM2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
 
 ZMK_COMBO(cut,   &kp LC(X),     LT3 LT1,     DEF NAV NUM, COMBO_TERM_SLOW)
 ZMK_COMBO(copy,  &kp LC(INS),   LT3 LT2,     DEF NAV NUM, COMBO_TERM_FAST)
@@ -39,10 +39,10 @@ ZMK_COMBO(paste, &kp LS(INS),   LT2 LT1,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(del,   &kp DEL,       RB1 RB2,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(bspc,  &kp BSPC,      RB2 RB3,     DEF NAV NUM, COMBO_TERM_FAST)
 
-ZMK_COMBO(dot,   &kp DOT,       RM1 RM2,     DEF     NUM, COMBO_TERM_FAST)
-ZMK_COMBO(colon, &kp COLON,     RM2 RM3,     DEF     NUM, COMBO_TERM_FAST)
-ZMK_COMBO(lt,    &kp LT,        RM1 RM2,         NAV    , COMBO_TERM_FAST)
-ZMK_COMBO(gt,    &kp GT,        RM2 RM3,         NAV    , COMBO_TERM_FAST)
+// ZMK_COMBO(dot,   &kp DOT,       RM1 RM2,     DEF     NUM, COMBO_TERM_FAST)
+// ZMK_COMBO(colon, &kp COLON,     RM2 RM3,     DEF     NUM, COMBO_TERM_FAST)
+// ZMK_COMBO(lt,    &kp LT,        RM1 RM2,         NAV    , COMBO_TERM_FAST)
+// ZMK_COMBO(gt,    &kp GT,        RM2 RM3,         NAV    , COMBO_TERM_FAST)
 
 ZMK_COMBO(qmark, &kp QMARK,     RT1 RT2,     DEF     NUM, COMBO_TERM_FAST)
 ZMK_COMBO(excl,  &kp EXCL,      RT2 RT3,     DEF     NUM, COMBO_TERM_FAST)
