--- a/config/german.dtsi
+++ b/config/german.dtsi
@@ -1,3 +1,7 @@
+
+#include <dt-bindings/zmk/keys.h>
+
+
 /* German umlauts */
 ZMK_UNICODE_PAIR(   de_ae,      N0, N0,  E, N4,    N0, N0,  C, N4)
 ZMK_UNICODE_PAIR(   de_oe,      N0, N0,  F, N6,    N0, N0,  D, N6)
