--- a/config/german.dtsi
+++ b/config/german.dtsi
@@ -6,34 +6,34 @@
         unicode_german: unicode_german {
             compatible = "zmk,behavior-unicode";
             #binding-cells = <1>;
-            hex-mode = <2>; // For macOS
+            hex-mode = <UC_MAC>; // For macOS
             label = "UNICODE_GERMAN";
         };
     };
 
     macros {
-        german_ae: de_ae {
+        german_ae: german_ae {
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings = <&unicode_german 0x00E4>;
             label = "GERMAN_AE";
         };
         
-        german_oe: de_oe {
+        german_oe: german_oe {
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings = <&unicode_german 0x00F6>;
             label = "GERMAN_OE"; 
         };
         
-        german_ue: de_ue {
+        german_ue: german_ue {
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings = <&unicode_german 0x00FC>;
             label = "GERMAN_UE";
         };
         
-        german_eszett: de_eszett {
+        german_eszett: german_eszett {
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings = <&unicode_german 0x00DF>;
