--- a/config/german.dtsi
+++ b/config/german.dtsi
@@ -12,22 +12,26 @@
 
 #include "helper.h"
 
+#include "helper.h"
+
 / {
     behaviors {
         // Define Unicode behaviors for German characters
         de_ae_lower: de_ae_lower {
+            label = "DE_AE_LOWER"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp E &kp N4>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp E &kp N4>; // ä
         };
         de_ae_upper: de_ae_upper {
+            label = "DE_AE_UPPER"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp C &kp N4>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp C &kp N4>; // Ä
         };
         de_ae: de_ae {
             compatible = "zmk,behavior-mod-morph";
@@ -37,18 +41,20 @@
         };
 
         de_oe_lower: de_oe_lower {
+            label = "DE_OE_LOWER"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp F &kp N6>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp F &kp N6>; // ö
         };
         de_oe_upper: de_oe_upper {
+            label = "DE_OE_UPPER"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp N6>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp N6>; // Ö
         };
         de_oe: de_oe {
             compatible = "zmk,behavior-mod-morph";
@@ -58,18 +64,20 @@
         };
 
         de_ue_lower: de_ue_lower {
+            label = "DE_UE_LOWER"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp F &kp C>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp F &kp C>; // ü
         };
         de_ue_upper: de_ue_upper {
+            label = "DE_UE_UPPER"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp C>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp C>; // Ü
         };
         de_ue: de_ue {
             compatible = "zmk,behavior-mod-morph";
@@ -79,11 +87,12 @@
         };
 
         de_eszett: de_eszett {
+            label = "DE_ESZETT"; // Add a unique label
             compatible = "zmk,behavior-macro";
             wait-ms = <0>;
             tap-ms = <0>;
             #binding-cells = <0>;
-            bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp F>;
+            bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp F>; // ß
         };
     };
 };
