--- a/config/german.dtsi
+++ b/config/german.dtsi
@@ -1,17 +1,3 @@
-//#include "helper.h"
-
-// / {
- //   behaviors {
- //       // Define Unicode behaviors for German characters
- //       ZMK_UNICODE_PAIR(de_ae, N0, N0, E, N4, N0, N0, C, N4); // ä and Ä
- //       ZMK_UNICODE_PAIR(de_oe, N0, N0, F, N6, N0, N0, D, N6); // ö and Ö
- //       ZMK_UNICODE_PAIR(de_ue, N0, N0, F, C, N0, N0, D, C);   // ü and Ü
- //       ZMK_UNICODE_SINGLE(de_eszett, N0, N0, D, F);           // ß
- //   };
-// };
-
-#include "helper.h"
-
 #include "helper.h"
 
 / {
@@ -34,6 +20,7 @@
             bindings = <&macro_tap &kp N0 &kp N0 &kp C &kp N4>; // Ä
         };
         de_ae: de_ae {
+            label = "DE_AE_MODMORPH"; // Add a unique label
             compatible = "zmk,behavior-mod-morph";
             #binding-cells = <0>;
             bindings = <&de_ae_lower>, <&de_ae_upper>;
@@ -57,6 +44,7 @@
             bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp N6>; // Ö
         };
         de_oe: de_oe {
+            label = "DE_OE_MODMORPH"; // Add a unique label
             compatible = "zmk,behavior-mod-morph";
             #binding-cells = <0>;
             bindings = <&de_oe_lower>, <&de_oe_upper>;
@@ -80,6 +68,7 @@
             bindings = <&macro_tap &kp N0 &kp N0 &kp D &kp C>; // Ü
         };
         de_ue: de_ue {
+            label = "DE_UE_MODMORPH"; // Add a unique label
             compatible = "zmk,behavior-mod-morph";
             #binding-cells = <0>;
             bindings = <&de_ue_lower>, <&de_ue_upper>;
