--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: cosmicbuffalo
-      revision: main
+      revision: adv360-led
       import: app/west.yml
   self:
     path: config
